about org and my role

--- a/index.html
+++ b/index.html
@@ -387,9 +387,15 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_209790919FM"><div class="nodecontent">Senior Researcher</div></li>
 	<li class="basic" id="FMID_1696507370FM"><div class="nodecontent">Warsaw / Cambridge, PL/UK</div></li>
 	<li class="basic" id="FMID_1937236026FM"><div class="nodecontent"><a href="http://maths.com.pl/?q=english">link</a> <a href="http://maths.com.pl/?q=english"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
-	<li class="exp" id="FMID_792106149FM"><div class="nodecontent">summary</div>
+	<li class="exp" id="FMID_792106149FM"><div class="nodecontent">summary:</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_494693758FM"><div class="nodecontent">Technical consulting; Research in systems modelling; machine learning data semantics; project management and coordination; leader of projects focused on disruptive technologies.</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_494693758FM"><div class="nodecontent">Technical consulting; Research in systems modelling; machine learning data semantics; project management and coordination; leader of projects focused on disruptive technologies.</div></li></ul></li>
+	<li class="exp" id="FMID_1728405576FM"><div class="nodecontent">about organization:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_339106514FM"><div class="nodecontent">the Centre is a joint initiative of two institutes of Polish Academy of Sciences: Systems Research Institute and Institute of Mathematics. Created by dr Kamil Kulesza after his Cambridge postdoc and based on idea of ESGI (European Study Groups for Industry) - diverse groups of mathematical minds tackling real industry problems. Centre works with industry, performing research projects for various companies from all sectors of economy.</div></li></ul></li>
+	<li class="exp" id="FMID_666667161FM"><div class="nodecontent">my role:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_354073247FM"><div class="nodecontent">As a Senior Researcher I have led projects in areas of technology. I managed technology development monitoring and technology niches discovery process. I co-organized summer data science workshops (a part of financial data mining). I have participated in creation of semantic knowledge representation systems (taxonomies, ontologies).</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_332419418FM"><div class="nodecontent">Energy Center of the Netherlands (ECN)</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1342662409FM"><div class="nodecontent">April-August 2013</div></li>
@@ -398,7 +404,13 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1977833948FM"><div class="nodecontent"><a href="https://www.ecn.nl/">link</a> <a href="https://www.ecn.nl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_592071557FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_1971738008FM"><div class="nodecontent">Techno-economic evaluation of existing  power plant modernization to bioenergy production and  negative CO2 emission.</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_1971738008FM"><div class="nodecontent">Techno-economic evaluation of existing  power plant modernization to bioenergy production and  negative CO2 emission.</div></li></ul></li>
+	<li class="exp" id="FMID_1197782665FM"><div class="nodecontent">about organization:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1728569758FM"><div class="nodecontent">Biomass Department of ECN foceses on research and development of sustainable biomass conversion for heat and electricity production. Main topics of interest for the deparment are: gasification, syngas cleaning, torrefaction, biochemistry.</div></li></ul></li>
+	<li class="exp" id="FMID_1908353044FM"><div class="nodecontent">my role:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_185713484FM"><div class="nodecontent">As a visiting Researcher my main task was to deliver objectives of one of CATO2 project tasks, that  was techno-economic analysis of biomass co-firing power plant combined with CCS (Carbon Capture and Storage).</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1243328123FM"><div class="nodecontent">Institute of Power Engineering (IEn)</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_739804188FM"><div class="nodecontent">2007-2014</div></li>
@@ -408,7 +420,13 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_885645576FM"><div class="nodecontent"><a href="https://ien.com.pl/cpc-thermal-processing-department">link</a> <a href="https://ien.com.pl/cpc-thermal-processing-department"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_1343903865FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_759343860FM"><div class="nodecontent">Mathematical modelling of energy systems, industry consulting and techno-economic analysis;  project management and coordination; research and experimental work on NOx emissions and its mitigation (SCR and SNCR) and oxy-combustion with CCS, μCHP research (fuel cells, ORC, Stirling engines).</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_759343860FM"><div class="nodecontent">Mathematical modelling of energy systems, industry consulting and techno-economic analysis;  project management and coordination; research and experimental work on NOx emissions and its mitigation (SCR and SNCR) and oxy-combustion with CCS, μCHP research (fuel cells, ORC, Stirling engines).</div></li></ul></li>
+	<li class="exp" id="FMID_1392925981FM"><div class="nodecontent">about organization:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_461738612FM"><div class="nodecontent">Thermal Processes Department is fast growing unit that grows from experience with mills and burners in coal power plants expertise. The scope had broadened in XXI century and included gasification and solid oxide fuel cells, biomass conversion, flue gas treatment. Formally three teams have been formed: combustion, gasification, fuel cells.</div></li></ul></li>
+	<li class="exp" id="FMID_533568501FM"><div class="nodecontent">my role:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1362308856FM"><div class="nodecontent">I have been recruited as an engineer for fuel cells systems development (auxiliaries, heat exchange optimization). Due to slow development of core fuel cell technology I started to take part in many consulting projects for power plants, including fuel gas treatment, fuel flexibility. Because of intense commitment to those consulting tasks I have been formally assigned to Combustion Team, but I have been an interconnector between the teams and a person dealing with subjects not being the core competence of the department. One of the most important projects was starting development of new line of interest in the department: biomass fired mini CHP (Combined Heat and Power).</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_421200268FM"><div class="nodecontent">Polska Ekologia (poleko)</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_202565188FM"><div class="nodecontent">2006-2007</div></li>
@@ -417,7 +435,13 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_761148704FM"><div class="nodecontent"><a href="http://poleko.pl/">link</a> <a href="http://poleko.pl/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_593435763FM"><div class="nodecontent">summary</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_1925325655FM"><div class="nodecontent">Consulting individual and industry clients; design of large solar heating plants; giving solar energy lectures to heating system installers.</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_1925325655FM"><div class="nodecontent">Consulting individual and industry clients; design of large solar heating plants; giving solar energy lectures to heating system installers.</div></li></ul></li>
+	<li class="exp" id="FMID_319158110FM"><div class="nodecontent">about organization:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_4895806FM"><div class="nodecontent">Polska Ekologia was a small company founded by author of the first polish book about solar energy Miroslaw Zawadzki. It was a main distributor of Sunex solar collectors in Poland (Sunex mostly designed and produced collectors for western Europe under other brands). Company organised weekly one-day courses about solar energy for installers and designers.</div></li></ul></li>
+	<li class="exp" id="FMID_1020774441FM"><div class="nodecontent">my role:</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1573033921FM"><div class="nodecontent">As a Technical Adviser I have helped to design solar (and heat pump) systems. I have been the whole technical department in company so I gave lectures, wrote technical documentation, made costs calculations and investment return assessment.</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other (early) experiences</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1453838897FM"><div class="nodecontent">Transition Technologies (TT)</div>
