added live courses

--- a/index.html
+++ b/index.html
@@ -516,10 +516,27 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_1512685952FM"><div class="nodecontent">Summary:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1844836659FM"><div class="nodecontent">Individual and social psychology followed by negotiations, motivation, recruitment and leadership theory and workshops</div></li></ul></li></ul></li></ul></li>
-	<li class="exp" id="FMID_263790721FM"><div class="nodecontent">MOOC<br />(edX, coursera)</div>
+	<li class="exp" id="FMID_1249078297FM"><div class="nodecontent">courses</div>
 		<ul class="sub">
-	<li class="col" id="FMID_1141409201FM"><div class="nodecontent">Finished:</div>
+	<li class="col" id="FMID_1640812391FM"><div class="nodecontent">Project Management</div>
 		<ul class="subexp">
+	<li class="basic" id="FMID_1911531237FM"><div class="nodecontent">IEn 2011</div></li></ul></li>
+	<li class="col" id="FMID_1574434224FM"><div class="nodecontent">Proposal Writing</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1125658723FM"><div class="nodecontent">IEn 2012</div></li></ul></li>
+	<li class="col" id="FMID_819683736FM"><div class="nodecontent">Intelectual Property Commercialization</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1707451211FM"><div class="nodecontent">IEn 2013</div></li></ul></li>
+	<li class="col" id="FMID_1935943138FM"><div class="nodecontent">Energy Efficiency Programmes</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1721430008FM"><div class="nodecontent">IEn 2011</div></li></ul></li>
+	<li class="col" id="FMID_259810364FM"><div class="nodecontent">Biomas Conversion</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_246808252FM"><div class="nodecontent">IEn/ECN 2013</div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_263790721FM"><div class="nodecontent">MOOCs<br />(edX, coursera)</div>
+		<ul class="sub">
+	<li class="exp" id="FMID_1141409201FM"><div class="nodecontent">Finished:</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_1219118370FM"><div class="nodecontent">Introduction to Computational Thinking and Data Science </div></li>
 	<li class="basic" id="FMID_415491065FM"><div class="nodecontent">Computer Science and Programming</div></li>
 	<li class="basic" id="FMID_217044665FM"><div class="nodecontent">Model Thinking</div></li>
