added data carpentry event

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_1020774441FM"><div class="nodecontent">my role:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1573033921FM"><div class="nodecontent">As a Technical Adviser I have helped to design solar (and heat pump) systems. I have been the whole technical department in company so I gave lectures, wrote technical documentation, made costs calculations and investment return assessment.</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other (early) experiences</div>
+	<li class="exp" id="FMID_709753113FM"><div class="nodecontent">other experiences</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1453838897FM"><div class="nodecontent">Transition Technologies (TT)</div>
 		<ul class="sub">
@@ -482,7 +482,10 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1768381180FM"><div class="nodecontent">2003-now</div></li>
 	<li class="basic" id="FMID_921872015FM"><div class="nodecontent">1000+ edits</div></li>
 	<li class="basic" id="FMID_913973608FM"><div class="nodecontent"><a href="https://pl.wikipedia.org/w/index.php?title=Specjalna:Wk%C5%82ad/Strug&amp;dir=prev&amp;offset=20040203224739&amp;limit=500&amp;target=Strug">mostly polish wikipedia</a> <a href="https://pl.wikipedia.org/w/index.php?title=Specjalna:Wk%C5%82ad/Strug&amp;dir=prev&amp;offset=20040203224739&amp;limit=500&amp;target=Strug"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
-	<li class="basic" id="FMID_898172762FM"><div class="nodecontent"><a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug">english is still lean</a> <a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li></ul></li></ul></li>
+	<li class="basic" id="FMID_898172762FM"><div class="nodecontent"><a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug">english is still lean</a> <a href="https://en.wikipedia.org/w/index.php?limit=50&amp;tagfilter=&amp;title=Special%3AContributions&amp;contribs=user&amp;target=Strug"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_1759478639FM"><div class="nodecontent">Software Carpentry</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_388821253FM"><div class="nodecontent">secondary instructor at Data Carpentry workshops</div></li></ul></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ff99ff;" id="FMID_851668007FM"><div class="nodecontent">Education</div>
 		<ul class="subexp">
 	<li class="col" id="FMID_651311555FM"><div class="nodecontent">BEng</div>
@@ -612,8 +615,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_402804112FM"><div class="nodecontent">never learned but I do have Russian members of family and I found to be communicative while traveling through eastern Europe</div></li></ul></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1578634592FM"><div class="nodecontent">Computers</div>
 		<ul class="sub">
-	<li class="col" id="FMID_1707013857FM"><div class="nodecontent">Programming</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_1707013857FM"><div class="nodecontent">Programming</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_844105647FM"><div class="nodecontent">Python</div></li>
 	<li class="basic" id="FMID_169200090FM"><div class="nodecontent">R</div></li>
 	<li class="basic" id="FMID_1956920434FM"><div class="nodecontent">MATLAB</div></li>
@@ -623,8 +626,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_775461806FM"><div class="nodecontent">bash</div></li></ul></li>
 	<li class="col" id="FMID_357786455FM"><div class="nodecontent">Usage</div>
 		<ul class="subexp">
-	<li class="col" id="FMID_1397122887FM"><div class="nodecontent">Office</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_1397122887FM"><div class="nodecontent">Office</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_1601793405FM"><div class="nodecontent">MS Office</div></li>
 	<li class="exp" id="FMID_1502139035FM"><div class="nodecontent">LibreOffice</div>
 		<ul class="sub">
@@ -650,8 +653,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="exp" id="FMID_768149214FM"><div class="nodecontent">publishing</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_278036726FM"><div class="nodecontent">Scribus</div></li></ul></li></ul></li></ul></li>
-	<li class="col" id="FMID_1507597639FM"><div class="nodecontent">Modelling frameworks/environments</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_1507597639FM"><div class="nodecontent">Modelling frameworks/environments</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_976730293FM"><div class="nodecontent">ANSYS FLUENT</div></li>
 	<li class="basic" id="FMID_808693913FM"><div class="nodecontent">Aspen Plus</div></li>
 	<li class="basic" id="FMID_1023679897FM"><div class="nodecontent">HYSYS</div></li>
@@ -660,8 +663,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_922795718FM"><div class="nodecontent">DWSim</div></li>
 	<li class="basic" id="FMID_1312148650FM"><div class="nodecontent">OMEdit</div></li>
 	<li class="basic" id="FMID_1334010241FM"><div class="nodecontent">NetLogo</div></li></ul></li>
-	<li class="col" id="FMID_982326965FM"><div class="nodecontent">Version control</div>
-		<ul class="subexp">
+	<li class="exp" id="FMID_982326965FM"><div class="nodecontent">Version control</div>
+		<ul class="sub">
 	<li class="basic" id="FMID_143819547FM"><div class="nodecontent">git</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1208998012FM"><div class="nodecontent">Administration</div>
 		<ul class="sub">
@@ -691,6 +694,11 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_379316162FM"><div class="nodecontent">guitar</div></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ff9999;" id="FMID_598381028FM"><div class="nodecontent">Events</div>
 		<ul class="subexp">
+	<li class="exp" id="FMID_469710220FM"><div class="nodecontent">DataCarpentry 2015</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_186998475FM"><div class="nodecontent">secondary instructor at Data Carpentry workshops for Cambridge University phd students and post-docs</div></li>
+	<li class="basic" id="FMID_1792371936FM"><div class="nodecontent"><a href="https://lgatto.github.io/2015-09-10-CAM/">workshop website</a> <a href="https://lgatto.github.io/2015-09-10-CAM/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
+	<li class="basic" id="FMID_419665574FM"><div class="nodecontent"><a href="http://www.datacarpentry.org/">DataCarpentry</a> <a href="http://www.datacarpentry.org/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
 	<li class="exp" id="FMID_1067512755FM"><div class="nodecontent">ESGI 2014</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1971958410FM"><div class="nodecontent">European Study Group for Industry participant</div></li>
