added encoded email adress

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="col" id="FMID_1264322502FM"><div class="nodecontent">Contact</div>
 		<ul class="subexp">
-	<li class="basic" id="FMID_94879606FM"><div class="nodecontent">Please see other sources for email adress and phone number</div></li></ul></li>
+	<li class="col" id="FMID_94879606FM"><div class="nodecontent">e-mail</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_228740374FM"><div class="nodecontent">name at surname dot xyz</div></li></ul></li>
+	<li class="col" id="FMID_489649035FM"><div class="nodecontent">www</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1690025067FM"><div class="nodecontent"><a href="http://www.strug.xyz">http://www.strug.xyz</a> <a href="http://www.strug.xyz"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li>
 	<li class="col" id="FMID_1797690726FM"><div class="nodecontent">Born</div>
 		<ul class="subexp">
 	<li class="basic" id="FMID_42491660FM"><div class="nodecontent">1982-07-25</div></li>
