topped sustainability in economics interests

--- a/index.html
+++ b/index.html
@@ -325,12 +325,33 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_619550873FM"><div class="nodecontent">mixing industry with residential and commerce</div></li></ul></li></ul></li></ul></li>
 	<li class="col" id="FMID_55762447FM"><div class="nodecontent">Economy</div>
 		<ul class="subexp">
-	<li class="exp" id="FMID_521333145FM"><div class="nodecontent">macroeconomics</div>
+	<li class="exp" id="FMID_1505459486FM"><div class="nodecontent">sustainability</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_333868301FM"><div class="nodecontent">taxes</div></li>
-	<li class="basic" id="FMID_1056381363FM"><div class="nodecontent">policies</div></li>
-	<li class="basic" id="FMID_491426066FM"><div class="nodecontent">tariffs</div></li>
-	<li class="basic" id="FMID_1623237296FM"><div class="nodecontent">subsidies</div></li></ul></li>
+	<li class="exp" id="FMID_392533286FM"><div class="nodecontent">resource shortage / circular economy</div>
+		<ul class="sub">
+	<li class="exp" id="FMID_324937283FM"><div class="nodecontent">usage efficiency</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_475307254FM"><div class="nodecontent">minimizing animal based substances</div></li></ul></li>
+	<li class="basic" id="FMID_57535516FM"><div class="nodecontent">reusing</div></li>
+	<li class="basic" id="FMID_771703004FM"><div class="nodecontent">recycling</div></li>
+	<li class="basic" id="FMID_1923597973FM"><div class="nodecontent">upcycling</div></li></ul></li>
+	<li class="exp" id="FMID_143491275FM"><div class="nodecontent">climate change</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_383106591FM"><div class="nodecontent">carbon taxation</div></li>
+	<li class="basic" id="FMID_1069988506FM"><div class="nodecontent">low-carbon technologies</div></li>
+	<li class="exp" id="FMID_1996988251FM"><div class="nodecontent">emission reduction</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_856547413FM"><div class="nodecontent">industrial</div></li>
+	<li class="basic" id="FMID_1721518732FM"><div class="nodecontent">transport</div></li>
+	<li class="basic" id="FMID_424872932FM"><div class="nodecontent">animal</div></li></ul></li></ul></li>
+	<li class="exp" id="FMID_599234406FM"><div class="nodecontent">biodiversity</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_507884199FM"><div class="nodecontent">wildlife conservation</div></li>
+	<li class="basic" id="FMID_1563055422FM"><div class="nodecontent">small scale farming</div></li>
+	<li class="basic" id="FMID_710259228FM"><div class="nodecontent">farming seeds diversity</div></li></ul></li>
+	<li class="exp" id="FMID_1844046905FM"><div class="nodecontent">social inclusiveness</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_915138063FM"><div class="nodecontent">human rights</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1903211154FM"><div class="nodecontent">developing countries</div>
 		<ul class="sub">
 	<li class="col" id="FMID_565097495FM"><div class="nodecontent">systemic help</div>
@@ -341,21 +362,12 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_981596742FM"><div class="nodecontent">energy</div></li>
 	<li class="basic" id="FMID_1645570155FM"><div class="nodecontent">water</div></li>
 	<li class="basic" id="FMID_1382357224FM"><div class="nodecontent">telecommunication</div></li></ul></li></ul></li>
-	<li class="exp" id="FMID_1505459486FM"><div class="nodecontent">sustainability</div>
+	<li class="exp" id="FMID_521333145FM"><div class="nodecontent">macroeconomics</div>
 		<ul class="sub">
-	<li class="exp" id="FMID_392533286FM"><div class="nodecontent">resource shortage</div>
-		<ul class="sub">
-	<li class="exp" id="FMID_324937283FM"><div class="nodecontent">usage efficiency</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_475307254FM"><div class="nodecontent">minimizing animal based substances</div></li></ul></li>
-	<li class="basic" id="FMID_57535516FM"><div class="nodecontent">reusing</div></li>
-	<li class="basic" id="FMID_771703004FM"><div class="nodecontent">recycling</div></li>
-	<li class="basic" id="FMID_1923597973FM"><div class="nodecontent">upcycling</div></li></ul></li>
-	<li class="basic" id="FMID_143491275FM"><div class="nodecontent">climate change</div></li>
-	<li class="basic" id="FMID_599234406FM"><div class="nodecontent">biodiversity</div></li>
-	<li class="exp" id="FMID_1844046905FM"><div class="nodecontent">social inclusiveness</div>
-		<ul class="sub">
-	<li class="basic" id="FMID_915138063FM"><div class="nodecontent">human rights</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_333868301FM"><div class="nodecontent">taxes</div></li>
+	<li class="basic" id="FMID_1056381363FM"><div class="nodecontent">policies</div></li>
+	<li class="basic" id="FMID_491426066FM"><div class="nodecontent">tariffs</div></li>
+	<li class="basic" id="FMID_1623237296FM"><div class="nodecontent">subsidies</div></li></ul></li>
 	<li class="exp" id="FMID_65414322FM"><div class="nodecontent">openness</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1276741714FM"><div class="nodecontent">transparency</div></li>
