--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_605033517FM"><div class="nodecontent">monte carlo risk assesment</div></li></ul></li>
 	<li class="exp" id="FMID_1138378794FM"><div class="nodecontent">strategic analysis</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_302097517FM"><div class="nodecontent">problems structurization</div></li>
-	<li class="basic" id="FMID_54903473FM"><div class="nodecontent">market boundaries description</div></li>
+	<li class="exp" id="FMID_302097517FM"><div class="nodecontent">problems structurization</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1064572897FM"><div class="nodecontent">Means-Ends Analysis (MEA)</div></li>
+	<li class="basic" id="FMID_1735135781FM"><div class="nodecontent">Mutually-Exclusive-Collectively-Exhaustive (MECE)</div></li></ul></li>
+	<li class="basic" id="FMID_54903473FM"><div class="nodecontent">market boundaries identification</div></li>
 	<li class="basic" id="FMID_1935910418FM"><div class="nodecontent">resources utilization analysis</div></li></ul></li>
 	<li class="exp" id="FMID_871529133FM"><div class="nodecontent">heating systems design</div>
 		<ul class="sub">
