--- a/index.html
+++ b/index.html
@@ -724,6 +724,21 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1971958410FM"><div class="nodecontent">European Study Group for Industry participant</div></li>
 	<li class="basic" id="FMID_1326055945FM"><div class="nodecontent">Copenhagen, DTU (Danish University of Technology)</div></li>
 	<li class="basic" id="FMID_1978987519FM"><div class="nodecontent">5 days workshop developing adjusting auto-adjusting ruck rear mirrors for spotting bikes on turns</div></li></ul></li>
+	<li class="exp" id="FMID_1947209972FM"><div class="nodecontent">LPB14</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_691925554FM"><div class="nodecontent">X Letnie Praktyki Badawcze 2014</div></li>
+	<li class="exp" id="FMID_508901320FM"><div class="nodecontent">10th Summer Research Internship 2014</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_16341995FM"><div class="nodecontent">Two months bootcamp for MSc and PhD students</div></li>
+	<li class="basic" id="FMID_242565181FM"><div class="nodecontent">Organized by CIAMSE which is part of Polish Academy of Sciences</div></li></ul></li>
+	<li class="exp" id="FMID_803088258FM"><div class="nodecontent">Leading one of the projects</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1851751889FM"><div class="nodecontent">SMAUG</div></li>
+	<li class="basic" id="FMID_1838897640FM"><div class="nodecontent">data analysis in banking sector</div></li></ul></li>
+	<li class="exp" id="FMID_1345934453FM"><div class="nodecontent">Co-leading one of the prjects</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_437787721FM"><div class="nodecontent">KANT</div></li>
+	<li class="basic" id="FMID_210451784FM"><div class="nodecontent">technology niches indentification</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_773753392FM"><div class="nodecontent">Strategy Planning 2012-2013</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_309699255FM"><div class="nodecontent">I participated in series of workshops that developed strategy for the department I was working in</div></li>
