added good reads link

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="col" id="FMID_304667630FM"><div class="nodecontent">Curent place of residence</div>
 		<ul class="subexp">
 	<li class="basic" id="FMID_171890046FM"><div class="nodecontent">Cambridge, UK</div></li></ul></li>
-	<li class="exp" id="FMID_1802514922FM"><div class="nodecontent">Social media</div>
-		<ul class="sub">
+	<li class="col" id="FMID_1802514922FM"><div class="nodecontent">Social media</div>
+		<ul class="subexp">
 	<li class="basic" id="FMID_1001086327FM"><div class="nodecontent"><a href="https://twitter.com/strugkr">twitter</a> <a href="https://twitter.com/strugkr"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="basic" id="FMID_1517175141FM"><div class="nodecontent"><a href="https://strugk.newsblur.com/">newsblur</a> <a href="https://strugk.newsblur.com/"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
-	<li class="basic" id="FMID_229367313FM"><div class="nodecontent"><a href="https://www.linkedin.com/in/strugk">linkedin</a> <a href="https://www.linkedin.com/in/strugk"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_229367313FM"><div class="nodecontent"><a href="https://www.linkedin.com/in/strugk">linkedin</a> <a href="https://www.linkedin.com/in/strugk"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
+	<li class="basic" id="FMID_1665567456FM"><div class="nodecontent"><a href="https://www.goodreads.com/review/list/20638544?shelf=read&amp;sort=date_read">good reads</a> <a href="https://www.goodreads.com/review/list/20638544?shelf=read&amp;sort=date_read"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li></ul></li>
 	<li class="col" style="background-color:#9999ff;" id="FMID_1192031706FM"><div class="nodecontent">Experience</div>
 		<ul class="subexp">
 	<li class="col" id="FMID_114226965FM"><div class="nodecontent">Research</div>
@@ -555,7 +556,10 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1721430008FM"><div class="nodecontent">IEn 2011</div></li></ul></li>
 	<li class="col" id="FMID_259810364FM"><div class="nodecontent">Biomas Conversion</div>
 		<ul class="subexp">
-	<li class="basic" id="FMID_246808252FM"><div class="nodecontent">IEn/ECN 2013</div></li></ul></li></ul></li>
+	<li class="basic" id="FMID_246808252FM"><div class="nodecontent">IEn/ECN 2013</div></li></ul></li>
+	<li class="col" id="FMID_996026143FM"><div class="nodecontent">Linux Administration</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1456038539FM"><div class="nodecontent">Linux Academy 2009</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_263790721FM"><div class="nodecontent">MOOCs<br />(edX, coursera)</div>
 		<ul class="sub">
 	<li class="exp" id="FMID_1141409201FM"><div class="nodecontent">Finished:</div>
