--- a/index.html
+++ b/index.html
@@ -770,4 +770,25 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1733646525FM"><div class="nodecontent">Presentation</div></li>
 	<li class="basic" id="FMID_1064189565FM"><div class="nodecontent">Example agroenergy thermodynamic cycles</div></li>
-	<li class="basic" id="FMID_270427036FM"><div class="nodecontent">Gdansk, Institute of Flow Machinery</div></li></ul></li></ul></li></ul></li></ul></div></body></html>
+	<li class="basic" id="FMID_270427036FM"><div class="nodecontent">Gdansk, Institute of Flow Machinery</div></li></ul></li></ul></li></ul></li></ul></div></body>
+        <!-- Start of StatCounter Code for Default Guide -->
+        <script type="text/javascript">
+        //<![CDATA[
+        var sc_project=10671045; 
+        var sc_invisible=0; 
+        var sc_security="faaf9c20"; 
+        var sc_text=2; 
+        var scJsHost = (("https:" == document.location.protocol) ?
+        "https://secure." : "http://www.");
+        document.write("<sc"+"ript type='text/javascript' src='" +
+        scJsHost+
+        "statcounter.com/counter/counter_xhtml.js'></"+"script>");
+        //]]>
+        </script>
+        <noscript><div class="statcounter"><a title="shopify traffic
+        stats" href="http://statcounter.com/shopify/"
+        class="statcounter"><img class="statcounter"
+        src="http://c.statcounter.com/10671045/0/faaf9c20/0/"
+        alt="shopify traffic stats" /></a></div></noscript>
+        <!-- End of StatCounter Code for Default Guide -->
+        </html>
