--- a/index.html
+++ b/index.html
@@ -777,7 +777,6 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
         var sc_project=10671045; 
         var sc_invisible=1; 
         var sc_security="faaf9c20"; 
-        var sc_text=2; 
         var scJsHost = (("https:" == document.location.protocol) ?
         "https://secure." : "http://www.");
         document.write("<sc"+"ript type='text/javascript' src='" +
@@ -785,10 +784,11 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
         "statcounter.com/counter/counter_xhtml.js'></"+"script>");
         //]]>
         </script>
-        <noscript><div class="statcounter"><a title="shopify traffic
-        stats" href="http://statcounter.com/shopify/"
+        <noscript><div class="statcounter"><a title="shopify
+        analytics" href="http://statcounter.com/shopify/"
         class="statcounter"><img class="statcounter"
-        src="http://c.statcounter.com/10671045/0/faaf9c20/0/"
-        alt="shopify traffic stats" /></a></div></noscript>
+        src="http://c.statcounter.com/10671045/0/faaf9c20/1/"
+        alt="shopify analytics" /></a></div></noscript>
         <!-- End of StatCounter Code for Default Guide -->
+
         </html>
