new script for automatic counter addition

--- a/index.html
+++ b/index.html
@@ -571,7 +571,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_1233787325FM"><div class="nodecontent">Analytics Edge</div></li>
 	<li class="basic" id="FMID_1470078404FM"><div class="nodecontent">Global Poverty Challenges</div></li>
 	<li class="basic" id="FMID_1935928864FM"><div class="nodecontent">New Generation Infrastructures</div></li>
-	<li class="basic" id="FMID_281637878FM"><div class="nodecontent">Introduction to Graphene Science and Technology</div></li></ul></li>
+	<li class="basic" id="FMID_281637878FM"><div class="nodecontent">Introduction to Graphene Science and Technology</div></li>
+	<li class="basic" id="FMID_1142572087FM"><div class="nodecontent"> Principles of Project Management </div></li></ul></li>
 	<li class="exp" id="FMID_1018594714FM"><div class="nodecontent">Unfinished:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1387495067FM"><div class="nodecontent">Financial Programming and Policies, Part 1: Macroeconomic Accounts &amp; Analysis</div></li>
@@ -586,7 +587,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_145282350FM"><div class="nodecontent">How Green Is That Product? An Introduction to Life Cycle Environmental Assessment</div></li>
 	<li class="basic" id="FMID_126119930FM"><div class="nodecontent">High Performance Scientific Computing</div></li>
 	<li class="basic" id="FMID_740115677FM"><div class="nodecontent">Introduction to Physical Chemistry</div></li>
-	<li class="basic" id="FMID_973052383FM"><div class="nodecontent">Introduction to Data Science</div></li></ul></li>
+	<li class="basic" id="FMID_973052383FM"><div class="nodecontent">Introduction to Data Science</div></li>
+	<li class="basic" id="FMID_1255838655FM"><div class="nodecontent">Software Processes and Agile Practices</div></li></ul></li>
 	<li class="exp" id="FMID_900181253FM"><div class="nodecontent">Planned:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_349263206FM"><div class="nodecontent">many more</div></li></ul></li></ul></li>
@@ -727,7 +729,8 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1971958410FM"><div class="nodecontent">European Study Group for Industry participant</div></li>
 	<li class="basic" id="FMID_1326055945FM"><div class="nodecontent">Copenhagen, DTU (Danish University of Technology)</div></li>
-	<li class="basic" id="FMID_1978987519FM"><div class="nodecontent">5 days workshop developing adjusting auto-adjusting ruck rear mirrors for spotting bikes on turns</div></li></ul></li>
+	<li class="basic" id="FMID_1978987519FM"><div class="nodecontent">5 days workshop developing adjusting auto-adjusting ruck rear mirrors for spotting bikes on turns</div></li>
+	<li class="basic" id="FMID_1920577746FM"><div class="nodecontent"><a href="http://www.compute.dtu.dk/english/cooperation/ESGI">DTU ESGI website</a> <a href="http://www.compute.dtu.dk/english/cooperation/ESGI"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li></ul></li>
 	<li class="exp" id="FMID_1947209972FM"><div class="nodecontent">LPB14</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_691925554FM"><div class="nodecontent">X Letnie Praktyki Badawcze 2014</div></li>
@@ -770,25 +773,23 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="basic" id="FMID_1733646525FM"><div class="nodecontent">Presentation</div></li>
 	<li class="basic" id="FMID_1064189565FM"><div class="nodecontent">Example agroenergy thermodynamic cycles</div></li>
-	<li class="basic" id="FMID_270427036FM"><div class="nodecontent">Gdansk, Institute of Flow Machinery</div></li></ul></li></ul></li></ul></li></ul></div></body>
-        <!-- Start of StatCounter Code for Default Guide -->
-        <script type="text/javascript">
-        //<![CDATA[
-        var sc_project=10671045; 
-        var sc_invisible=1; 
-        var sc_security="faaf9c20"; 
-        var scJsHost = (("https:" == document.location.protocol) ?
-        "https://secure." : "http://www.");
-        document.write("<sc"+"ript type='text/javascript' src='" +
-        scJsHost+
-        "statcounter.com/counter/counter_xhtml.js'></"+"script>");
-        //]]>
-        </script>
-        <noscript><div class="statcounter"><a title="shopify
-        analytics" href="http://statcounter.com/shopify/"
-        class="statcounter"><img class="statcounter"
-        src="http://c.statcounter.com/10671045/0/faaf9c20/1/"
-        alt="shopify analytics" /></a></div></noscript>
-        <!-- End of StatCounter Code for Default Guide -->
-
-        </html>
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+//<![CDATA[
+var sc_project=10671045; 
+var sc_invisible=1; 
+var sc_security="faaf9c20"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter_xhtml.js'></"+"script>");
+//]]>
+</script>
+<noscript><div class="statcounter"><a title="shopify
+analytics" href="http://statcounter.com/shopify/"
+class="statcounter"><img class="statcounter"
+src="http://c.statcounter.com/10671045/0/faaf9c20/1/"
+alt="shopify analytics" /></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+</html>
